--- a/site/about.html
+++ b/site/about.html
@@ -17,9 +17,7 @@
             </ul>
         </nav>
     </header>
-    <section>
-        <h2><center>Stalopxasine</center></h2>
-    </section>
+    <center><h2>Stalopxasine</h2></center>
     <section>
         <h2>Цель проекта:</h2>
         <h3>Создание видеоигры про человека который пишет новости в тоталитарном режиме..</h3>
