--- a/site/index.html
+++ b/site/index.html
@@ -17,11 +17,11 @@
             </ul>
         </nav>
     </header>
+    <center><h2>Stalopxasine</h2></center>
     <section>
-        <center><h1>Stalopxasine</h1></center>
         <center><h3>Создание видеоигры про человека который пишет новости в тоталитарном режиме.</h3></center>
-        <img src="main.png" alt="Изображение проекта">
-        <img src="main2.png" alt="Изображение проекта">
+        <img src="screen/main.png" alt="Изображение проекта">
+        <img src="screen/main2.png" alt="Изображение проекта">
     </section>
     <footer>
         <p>&copy; 2025 Проектная деятельность</p>
