--- a/site/journal.html
+++ b/site/journal.html
@@ -17,39 +17,43 @@
             </ul>
         </nav>
     </header>
+    <center><h2>Stalopxasine</h2></center>
+    <section><center><h2>Журнал работы</h2></center></section>
     <section>
-        <h2>Журнал работы</h2>
         <article>
-            <h3>14 марта 2025</h3>
-            <p>Настроены Docker-окружения для Strapi (v4) и PostgreSQL</p>
-            <p>Создана ER-диаграмма для моделей базы данных</p>
-            <p>Добавлено описание к моделям базы данных</p>
-            <p>Разработана логика выбора курсов на основе опросника</p>
-            <center><img src="startpage.jpg" width="500" height=auto alt="Изображение проекта"></center>
-            <center><img src="ER.png" alt="Изображение проекта"></center>
+            
+            <h3>03.03.25</h3>
+            <p>Создание  визуальной составляющей  UI-интерфейса</p>
+            <center><img src="screen/UI.png" width="700" height=auto alt="Изображение проекта"></center>
+        </article>
+    </section>
+<section>
+    <article>
+        <h3>13.03.25</h3>
+        <p>Прототип GUI-интерфейса рабочего стола</p>
+        <center><img src="screen/Desktop_prot.png" width="700" height=auto alt="Изображение проекта"></center>
+    </article>
+</section>
+<section>
+    <article>
+        <h3>17.03.25</h3>
+        <p>Система смены игровых сцен</p>
+        <center><img src="screen/change_scene.png" width="700" height=auto alt="Изображение проекта"></center>
+    </article>
+</section>
+    <section>
+        <article>
+            <h3>25.03.2025</h3>
+            <p>Создание концепт-документа</p>
+            <p>Создание концепт-артов</p>
+            <center><img src="screen/DOC.png" width="700" height=auto alt="Изображение проекта"></center>
         </article>
     </section>
     <section>
         <article>
-            <h3>27 марта 2025</h3>
-            <p>Реализованы эндпоинты витрины товаров</p>
-            <p>Созданы модели Survey и SurveyAnswer</p>
-            <p>Создана модель Product</p>
-            <p>Настроены сохранения ответов опросника</p>
-            <center><img src="product.jpg" width="700" height=auto alt="Изображение проекта"></center>
-            <center><img src="survey.jpg" width="700" height=auto alt="Изображение проекта"></center>
-        </article>
-    </section>
-    <section>
-        <article>
-            <h3>23 апреля 2025</h3>
-            <p>Привязаны эндпоинты для получения списка курсов и детальной информации</p>
-            <p>Настроены права доступа у различных ролей</p>
-            <p>Создана модель CourseRegistration</p>
-            <p>Реализованы эндпоинты для записи на курс</p>
-            <p>Создана админка для управления регистрациями на курсы</p>
-            <p>Создана сущность UserSurveyResponse ответы пользователя на опросы</p>
-            <p>Созданы эндпоинты: получить опрос и отправить ответ</p>
+            <h3>12.05.2025</h3>
+            <p>Движок процедурного редактирования текстов </p>
+            <center><img src="screen/dvizok.jpg" width="700" height=auto alt="Изображение проекта"></center>
         </article>
     </section>
     <footer>
