--- a/site/team.html
+++ b/site/team.html
@@ -17,6 +17,7 @@
             </ul>
         </nav>
     </header>
+    <center><h2>Stalopxasine</h2></center>
     <section>
         <h2>Участники проекта</h2>
         <ul>
