--- a/site/about.html
+++ b/site/about.html
@@ -24,8 +24,8 @@
     </section>
     <section>
         <h2>Задачи:</h2>
-        <ul>      
-            <li>                <li><a href="resources.html">Ресурсы</a></li><p>Разработка концепции игры.</p></li>
+        <ul>
+            <li><p>Разработка концепции игры.</p></li>
             <li><p>Тестирование и доработка.</p></li>
             <li><p>Разработать полноценный концепт-документ.</p></li>
             <li><p>Создать набор уникальных геймплей-механик.</p></li>
