--- a/site/about.html
+++ b/site/about.html
@@ -20,7 +20,7 @@
     <center><h2>Stalopxasine</h2></center>
     <section>
         <h2>Цель проекта:</h2>
-        <h3>Создание видеоигры про человека который пишет новости в тоталитарном режиме..</h3>
+        <h3>Разработать проект с внедренным процедурным редактированием текстов и эмуляцией компьютерного рабочего пространства.</h3>
     </section>
     <section>
         <h2>Задачи:</h2>
